--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,17 @@
-body{
-  .hello{
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+body {
+  .hello {
     border: 1px solid #000;
   }
+
 }
